[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/dashboard/widget_table/widget_table.gd" type="Script" id=1]
[ext_resource path="res://components/shared/int_spinbox_big.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/icon_128_back_thin.svg" type="Texture" id=3]

[node name="TableWidget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 1 )
widget_type_id = "Table"
supported_types = [ 1, 2 ]
attributes_to_save = [ "sorting_column", "sorting_type" ]

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "PanelWidgetBackground"

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Control" type="Control" parent="Content"]
margin_right = 1920.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_clip_content = true
size_flags_horizontal = 3

[node name="Headers" type="HBoxContainer" parent="Content/Control"]
margin_right = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Table" type="ScrollContainer" parent="Content"]
margin_top = 20.0
margin_right = 1920.0
margin_bottom = 1075.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rows" type="GridContainer" parent="Content/Table"]
margin_right = 1920.0
margin_bottom = 1055.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="PaginationSpacer" type="Control" parent="Content"]
margin_top = 1075.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 5 )

[node name="Pagination" parent="Content" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1047.0
margin_right = 180.0
margin_bottom = 1080.0
prefix = "Page"
suffix = "of 0"
use_max_value = true
min_value = 1
value_to_set = 1.0

[node name="IntEdit" parent="Content/Pagination" index="0"]
margin_right = 106.0
update_on_writing = false

[node name="MinusButton" parent="Content/Pagination" index="1"]
margin_left = 110.0
margin_right = 143.0
text = ""
icon_tex = ExtResource( 3 )

[node name="PlusButton" parent="Content/Pagination" index="2"]
margin_left = 147.0
text = ""
icon_tex = ExtResource( 3 )
flip_h = true

[connection signal="resized" from="." to="." method="_on_TableWidget_resized"]
[connection signal="value_changed" from="Content/Pagination" to="." method="_on_Pagination_value_changed"]

[editable path="Content/Pagination"]
